--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ canvas {
   left: 0;
   padding: 0 1rem 0 1rem;
   z-index: 200;
-/*   background-color: rgba(255,255,255,0.6); */
+  background-color: rgba(0,0,0,0.6);
   max-width: 100vw;
 }
 
